[package]
name = "firenibble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
postgres = { version = "0.19.7", features = ["with-time-0_3"] }
rand = "0.8.5"
time = "0.3.28"


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
