[package]
name = "firenibble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
postgres = { version = "0.19.10", features = ["with-time-0_3"] }
rand = "0.8.5"
time = "0.3.41"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
